CPL/Tema3/tema3-tests/statements.lcpl.err
Exception in thread "main" java.lang.NullPointerException
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:30)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Program.emitIR(Program.java:337)
	at LCPLCodeGen.main(LCPLCodeGen.java:23)
llc: statements.lcpl.ir:80:1: error: found end of file when expecting more instructions

^
clang: error: no such file or directory: 'statements.lcpl.ir.s'
./eval.sh: line 27: ./statements: No such file or directory
rm: cannot remove `statements': No such file or directory
